2007-01-23 [holger]	0.8cvs1

	* src/notification_popup.c
		Fix encoding of the displayed From and Subject
		lines for the popup if using libnotify.
		Thanks to Colin for helping me out on this.

2007-01-09 [paul]	0.8

	0.8 released

2007-01-08 [holger]	0.7cvs4

	* src/notification_popup.c
		Deal with libnotify popup timeout function
		error better.

2006-12-17 [holger]	0.7cvs3

	* src/notification_popup.c
		If a single mail message arrived,
		show its from and subject headers in popup.

2006-12-15 [ticho]	0.7cvs2

	* configure.ac
	* src/notification_plugin.c
		Use check_plugin_version() for version check.

2006-12-04 [holger]	0.7cvs1

	* configure.ac
		libnotify 0.4.3 seems to work well,
		indeed. Make this one the required version
		of libnotify (effectively activating 
		libnotify support from now on!).

2006-12-04 [paul]	0.7

	0.7 released

2006-11-28 [paul]	0.6cvs3

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	0.6cvs2

	* src/notification_plugin.c
	* src/notification_prefs.c
		renaming

2006-11-07 [paul]	0.6cvs1

	* ChangeLog
	* INSTALL
	* PATCHSETS
	* configure.ac
	* src/Makefile.am
	* src/notification_banner.c
	* src/notification_banner.h
	* src/notification_command.c
	* src/notification_command.h
	* src/notification_core.c
	* src/notification_core.h
	* src/notification_foldercheck.c
	* src/notification_foldercheck.h
	* src/notification_pixbuf.c
	* src/notification_pixbuf.h
	* src/notification_plugin.c
	* src/notification_plugin.h
	* src/notification_popup.c
	* src/notification_popup.h
	* src/notification_prefs.c
	* src/notification_prefs.h
	* src/raw_claws_mail_logo_64x64.h
	* src/raw_sylpheed_claws_logo_64x64.h
		Name change

2006-11-07 [paul]	0.6

	* 0.6 released

2006-10-20 [holger]	0.5cvs5

	* src/notification_core.c
	* src/notification_core.h
	* src/notification_plugin.c
		Make banner module obey global folder
		type limitations.

2006-10-15 [holger]	0.5cvs4
