@@ -30,3 +30,4 @@
 ( cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/notification_popup.c;  ) > 0.7cvs3.patchset
 ( cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/notification_popup.c;  ) > 0.7cvs4.patchset
 ( cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/notification_popup.c;  ) > 0.8cvs1.patchset
+( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/notification_banner.c;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/notification_foldercheck.c;  cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/notification_popup.c;  cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/notification_prefs.c;  ) > 0.8cvs2.patchset
