@@ -1,3 +1,11 @@
+2007-02-04 [colin]	0.8cvs2
+
+	* src/notification_banner.c
+	* src/notification_foldercheck.c
+	* src/notification_popup.c
+	* src/notification_prefs.c
+		Set wmclass on windows
+
 2007-01-23 [holger]	0.8cvs1
 
 	* src/notification_popup.c
